# agent-example

./: .env.example  .gitignore  ANNOTATION_GUIDE.md  CLAUDE.md  README.md  config.py  main.py  prd.md  pyproject.toml  技术架构.md
.claude/: settings.local.json
core/: __init__.py  agent.py  exceptions.py  llm_client.py
examples/: annotation_demo.py  demo.py  opencv_window_demo.py  tracking_concept_demo.py  validation_demo.py
tools/: __init__.py  annotation_tools.py  registry.py  video_tools.py
utils/: __init__.py  html_visualizer.py  tracking_validator.py  video_processor.py  visualization_helper.py
